--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,10 +4,12 @@
 
 {% load staticfiles %}
 {% load css_utils %}
+{% load analytical %}
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% analytical_head_top %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     {% block meta %}{% endblock %}
@@ -77,9 +79,11 @@
       
      
     </style>
+    {% analytical_head_bottom %}
   </head>
 
   <body >
+    {% analytical_body_top %}
      <!-- <img class="bg" src="{% static 'img/cover.jpg' %}"></img>   -->  
   {% block main_block %}{% endblock %}
 
@@ -99,5 +103,6 @@
           });
       });
   </script>
+  {% analytical_body_bottom %}
   </body>
   </html>
