--- a/paypalapp/templates/payment.html
+++ b/paypalapp/templates/payment.html
@@ -62,7 +62,7 @@
                   <div class="row">
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="id_firstname">State *</label>
+                            <label for="id_firstname">County *</label>
                             <input id="id_state" class="form-control" maxlength="255" name="state" type="text"  required="" value="">
                             <span class="help-block">Enter your state</span>
                         </div>
@@ -72,7 +72,7 @@
                         <div class="form-group">
                             <label for="id_firstname">Country *</label>
                             <select id="id_countrycode" class="form-control" name="countrycode" >
-                            	<option value="US" selected="selected">United States of America</option>
+								<option value="GB" selected="selected">United Kingdom (Great Britain)</option>
 								<option value="CA">Canada</option>
 								<option value="AF">Afghanistan</option>
 								<option value="AL">Albania</option>
@@ -294,7 +294,7 @@
 								<option value="UG">Uganda</option>
 								<option value="UA">Ukraine</option>
 								<option value="AE">United Arab Emirates</option>
-								<option value="GB">United Kingdom (Great Britain)</option>
+                            	<option value="US">United States of America</option>
 								<option value="UM">United States Minor Outlying Islands</option>
 								<option value="VI">United States Virgin Islands</option>
 								<option value="ZZ">Unknown or unspecified country</option>
@@ -319,7 +319,7 @@
                   <div class="row">
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="id_zip">Postal / Zip Code *</label>
+                            <label for="id_zip">Postcode *</label>
                             <input id="id_zip" class="form-control" maxlength="255" name="zip" type="text"  required="" value="">
                             <span class="help-block">Enter your postal code</span>
                         </div>
