--- a/public/templates/public/registerfounditem.html
+++ b/public/templates/public/registerfounditem.html
@@ -86,7 +86,12 @@
     });
 </script>
 
-
+<div class="container no-padding">
+  <ol class="breadcrumb">
+    <li><a href="{% url 'public:index' %}">Home</a></li>
+    <li class="active">Register Item</li>
+  </ol>
+</div>
 
 <div class="container container1" id="item_registration_form">
   <div class="row">
