--- a/public/templates/public/registration_form.html
+++ b/public/templates/public/registration_form.html
@@ -101,6 +101,14 @@
         });
     });
 </script>
+
+<div class="container no-padding">
+  <ol class="breadcrumb">
+    <li><a href="{% url 'public:index' %}">Home</a></li>
+    <li class="active">Registration</li>
+  </ol>
+</div>
+
 <div class="container">
     <div class="row">
         <div class="modal-content">
@@ -198,12 +206,7 @@
                                 <label class="choice-standard" for="choice-standard">Standard </label>
                                 <div class="reveal-if-active">
                                     <div class="choice">
-                                        <span class="checkmark">
-                                            <div class="xmark_circle"></div>
-                                            <div class="xmark_stem2"></div>
-                                            <div class="xmark_stem1"></div>
-                                        </span>
-                                        <span>Unlimited number of registered items;</span>
+                                        <span>Up to 5 registered items registered items;</span>
                                     </div>
                                 </div>
                             </div>
