--- a/public/templates/public/terms_conditions.html
+++ b/public/templates/public/terms_conditions.html
@@ -6,6 +6,12 @@
 
 {% block body_block %}
 
+<div class="container no-padding">
+  <ol class="breadcrumb">
+    <li><a href="{% url 'public:index' %}">Home</a></li>
+    <li class="active">Terms and Conditions</li>
+  </ol>
+</div>
 
 <div class="container">
     <h1 class="text-center">I've Been Found - Terms & Conditions</h1>
