--- a/staticpages/templates/staticpages/about_us.html
+++ b/staticpages/templates/staticpages/about_us.html
@@ -10,12 +10,18 @@
 
 {% block body_block %}
 
+<div class="container no-padding">
+  <ol class="breadcrumb">
+    <li><a href="{% url 'public:index' %}">Home</a></li>
+    <li class="active">About Us</li>
+  </ol>
+</div>
+
 <div class="container">
     <h1 class="text-center">I've Been Found - Who are we?</h1>
     <br/>
-    <p style="text-align: justify;">We are creating tools and services that will enable seekers and finders to connect. We are driven individuals who want to help others do the right thing: ethically, environmentally,  for those around them and commercially. There are existing challenges to repatriate found items for both the general public, community groups and businesses. We are on track to help solve this inherent problem.</p>
+    <p style="text-align: justify;">I’ve Been Found (IBF) is an online lost and found service currently in phase 1 development. We understand how losing possessions is a universal human experience. We believe that people who find lost items will invest time and effort to see the item returned to its owner. We want to meet that need and encourage that community-based action through effective technology development.</p>
     <br/>
-    <p style="text-align: justify;">If you have any ideas to shape our offering or want to know more, you can find us at <a href="mailto:seeking@ivebeenfound.com">seeking@ivebeenfound.com</a></p>
 
 
 </div>
