--- a/staticpages/templates/staticpages/contact_page.html
+++ b/staticpages/templates/staticpages/contact_page.html
@@ -12,43 +12,21 @@
 
 {% block body_block %}
 
+<div class="container no-padding">
+  <ol class="breadcrumb">
+    <li><a href="{% url 'public:index' %}">Home</a></li>
+    <li class="active">Contact US</li>
+  </ol>
+</div>
+
 <div class="container">
+    <br>
+    <br>
 	<div class="row">
 		<div class="col-md-offset-2 col-lg-8">
-
-            <div class="card hovercard">
-                <div class="cardheader1">
-
-                </div>
-                <div class="avatar">
-                    <img alt="" src="{% static 'public/img/pbp.jpg' %}">
-                </div>
-                <div class="info">
-                    <div class="title">
-                        <a target="_blank" href="http://scripteden.com/">Pavel B. Popovici</a>
-                    </div>
-                    <div class="desc">Passionate designer</div>
-                    <div class="desc">Curious developer</div>
-                    <div class="desc">Tech geek</div>
-                </div>
-                <div class="bottom">
-                    <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                    <a class="btn btn-danger btn-sm" rel="publisher"
-                       href="https://plus.google.com/+ahmshahnuralam">
-                        <i class="fa fa-google-plus"></i>
-                    </a>
-                    <a class="btn btn-primary btn-sm" rel="publisher"
-                       href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a class="btn btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-behance"></i>
-                    </a>
-                </div>
-
-            </div>
+            <p style="font-size:2rem">Contact us at:</p>
+            <a> hello@ivebeenfound.com</a>
+            <br>Carlton House, Epsom, Surrey KT18 7RL
         </div>
 
 	</div>
@@ -61,15 +39,13 @@
 
                 </div>
                 <div class="avatar">
-                    <img alt="" src="{% static 'public/img/pdp.jpg' %}">
+                    <img alt="" src="{% static 'public/img/rus.jpg' %}">
                 </div>
                 <div class="info">
                     <div class="title">
-                        <a target="_blank" href="http://scripteden.com/">Petru D. Popovici</a>
+                        <a target="_blank" href="http://scripteden.com/">Russ Oliver</a>
                     </div>
-                    <div class="desc">Passionate designer</div>
-                    <div class="desc">Curious developer</div>
-                    <div class="desc">Tech geek</div>
+                    <div class="desc">russ.oliver@thebigconsulting.com</div>
                 </div>
                 <div class="bottom">
                     <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
@@ -101,15 +77,14 @@
 
                 </div>
                 <div class="avatar">
-                    <img alt="" src="{% static 'public/img/mm.jpg' %}">
+                    <img alt="" src="{% static 'public/img/sam.jpg' %}">
                 </div>
                 <div class="info">
                     <div class="title">
-                        <a target="_blank" href="http://scripteden.com/">Mahmoud Miri</a>
+                        <a target="_blank" href="http://scripteden.com/">Samuel Nash</a>
                     </div>
-                    <div class="desc">Passionate designer</div>
-                    <div class="desc">Curious developer</div>
-                    <div class="desc">Tech geek</div>
+                    <div class="desc">Project Manager</div>
+                    <div class="desc">sam.nash@thebigconsulting.com</div>
                 </div>
                 <div class="bottom">
                     <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
@@ -133,23 +108,21 @@
 
 	</div>
 
-	<div class="row">
-		<div class="col-md-offset-2 col-lg-8">
+    <div class="row">
+        <div class="col-md-offset-2 col-lg-8">
 
             <div class="card hovercard">
-                <div class="cardheader4">
+                <div class="cardheader3">
 
                 </div>
                 <div class="avatar">
-                    <img alt="" src="{% static 'public/img/dar.jpg' %}">
+                    <img alt="" src="{% static 'public/img/george.jpg' %}">
                 </div>
                 <div class="info">
                     <div class="title">
-                        <a target="_blank" href="http://scripteden.com/">Dan A. Rusu</a>
+                        <a target="_blank" href="http://scripteden.com/">George Noble</a>
                     </div>
-                    <div class="desc">Passionate designer</div>
-                    <div class="desc">Curious developer</div>
-                    <div class="desc">Tech geek</div>
+                    <div class="desc">george.noble@thebigconsulting.com</div>
                 </div>
                 <div class="bottom">
                     <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
@@ -171,87 +144,8 @@
 
         </div>
 
-	</div>
+    </div>
 
-	<div class="row">
-		<div class="col-md-offset-2 col-lg-8">
-
-            <div class="card hovercard">
-                <div class="cardheader5">
-
-                </div>
-                <div class="avatar">
-                    <img alt="" src="{% static 'public/img/ss.jpg' %}">
-                </div>
-                <div class="info">
-                    <div class="title">
-                        <a target="_blank" href="http://scripteden.com/">Shashank Sharma</a>
-                    </div>
-                    <div class="desc">Passionate designer</div>
-                    <div class="desc">Curious developer</div>
-                    <div class="desc">Tech geek</div>
-                </div>
-                <div class="bottom">
-                    <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                    <a class="btn btn-danger btn-sm" rel="publisher"
-                       href="https://plus.google.com/+ahmshahnuralam">
-                        <i class="fa fa-google-plus"></i>
-                    </a>
-                    <a class="btn btn-primary btn-sm" rel="publisher"
-                       href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a class="btn btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-behance"></i>
-                    </a>
-                </div>
-            </div>
-
-        </div>
-
-	</div>
-
-	<div class="row">
-		<div class="col-md-offset-2 col-lg-8">
-
-            <div class="card hovercard">
-                <div class="cardheader6">
-
-                </div>
-                <div class="avatar">
-                    <img alt="" src="{% static 'public/img/vr.jpg' %}">
-                </div>
-                <div class="info">
-                    <div class="title">
-                        <a target="_blank" href="http://scripteden.com/">Vaidyalingam Ramalingam</a>
-                    </div>
-                    <div class="desc">Passionate designer</div>
-                    <div class="desc">Curious developer</div>
-                    <div class="desc">Tech geek</div>
-                </div>
-                <div class="bottom">
-                    <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                    <a class="btn btn-danger btn-sm" rel="publisher"
-                       href="https://plus.google.com/+ahmshahnuralam">
-                        <i class="fa fa-google-plus"></i>
-                    </a>
-                    <a class="btn btn-primary btn-sm" rel="publisher"
-                       href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a class="btn btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
-                        <i class="fa fa-behance"></i>
-                    </a>
-                </div>
-            </div>
-
-        </div>
-
-	</div>
 </div>
 
 
