--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -74,15 +74,16 @@
   
   <footer id="footer" class="footer">
     <div class="row">
-      <div class="col-xs-3">
+      <div class="col-xs-3 col-xs-offset-3">
         <p class="footer-column">About us</p>
         <ul class="">
           <li class=""><a href="{% url 'staticpages:about_us' %}" tabindex="7">What is IBF?</a></li>
-          <li class=""><a href="{% url 'staticpages:why_our_services' %}" tabindex="8">Why use our service?<a/></li>
-          <li class=""><a href="{% url 'staticpages:our_strategy' %}" tabindex="9">Our strategy</a></li>
+          <!--<li class=""><a href="{% url 'staticpages:why_our_services' %}" tabindex="8">Why use our service?<a/></li>
+          <li class=""><a href="{% url 'staticpages:our_strategy' %}" tabindex="9">Our strategy</a></li>-->
           <li class=""><a href="{% url 'staticpages:terms_conditions' %}"  tabindex="10">Terms &amp; Conditions</a></li>
         </ul>
       </div>
+      <!--
       <div class="col-xs-3">
         <p class="footer-column">How to:</p>
         <ul class="">
@@ -92,6 +93,7 @@
           <li class=""><a href="{% url 'staticpages:common_tips' %}" tabindex="14">Common tips</a></li>
         </ul>
       </div>
+    -->
       <div class="col-xs-3">
         <p class="footer-column">Our App</p>
         <ul class="">
@@ -100,6 +102,7 @@
           <li class=""><a tabindex="17">Windows Phone (soon)</a></li>
         </ul>
       </div>
+      <!--
       <div class="col-xs-3">
         <p class="footer-column">Contact &amp; Support</p>
         <ul class="">
@@ -109,6 +112,7 @@
           <li class=""><a href="{% url 'staticpages:accessibility_support' %}" tabindex="21">Accessibility Note</a></li>
         </ul>
       </div>
+    -->
     </div>
   </footer>
 
